txt-output/19.txt
RAW FILE BEING COMPILED: 
---------------------------------------

module Main where

import Data.Char

-- Problem: [1..10] and even should be swapped
test = map [1..10] even                         

main :: IO ()
main = putStrLn "hello world"

OUTPUT FROM GHC v 6.10.4: 
---------------------------------------

﻿C:\ghc\ghc-6.10.4\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-6.10.4\bin\ghc.exe ill-typed\19.hs *> aLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\19.hs:6:11:
    Couldn't match expected type `a -> b' against inferred type `[a1]'
    In the first argument of `map', namely `[1 .. 10]'
    In the expression: map ([1 .. 10]) even
    In the definition of `test': test = map ([1 .. 10]) even


OUTPUT FROM GHC v 9.2.5: 
---------------------------------------

﻿[1 of 1] Compiling Main             ( ill-typed\19.hs, ill-typed\19.o )
C:\ghc\ghc-9.2.5\bin\ghc.exe : 
At line:1 char:1
+ C:\ghc\ghc-9.2.5\bin\ghc.exe ill-typed\19.hs *> bLog.txt
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
ill-typed\19.hs:6:12: error:
    * Couldn't match expected type: a0 -> b
                  with actual type: [a2]
    * In the first argument of `map', namely `[1 .. 10]'
      In the expression: map [1 .. 10] even
      In an equation for `test': test = map [1 .. 10] even
    * Relevant bindings include
        test :: [b] (bound at ill-typed\19.hs:6:1)
  |
6 | test = map [1..10] even                         
  |            ^^^^^^^

ill-typed\19.hs:6:20: error:
    * Couldn't match expected type: [a0]
                  with actual type: a1 -> Bool
    * Probable cause: `even' is applied to too few arguments
      In the second argument of `map', namely `even'
      In the expression: map [1 .. 10] even
      In an equation for `test': test = map [1 .. 10] even
  |
6 | test = map [1..10] even                         
  |                    ^^^^
